--- a/src/components/Frame/Frame.module.scss
+++ b/src/components/Frame/Frame.module.scss
@@ -1,18 +1,20 @@
 .frame {
-  padding: 10px;
-  background-color: #fff;
-  border-radius: 30px;
   display: flex;
   flex-direction: column;
-  margin-right: 40px;
-  justify-content: center;
   align-items: center;
-  &:hover {
-    cursor: pointer;
-  }
+  justify-content: center;
+  margin-right: 40px;
+  border-radius: 30px;
+  padding: 10px;
+  background-color: #fff;
+
   p {
     margin: 0;
+    font-weight: 500;
     font-size: 24px;
-    font-weight: normal;
+  }
+
+  &:hover {
+    cursor: pointer;
   }
 }
