--- a/src/components/Widgets/Widgets.module.scss
+++ b/src/components/Widgets/Widgets.module.scss
@@ -1,21 +1,26 @@
+@import 'style/global-mixins';
+
 .widgets {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
   grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
 }
+
 h3 {
   margin-bottom: 0;
 }
+
 .frame {
-  background: rgba(13, 30, 41, 0.4);
-  padding: 30px;
   border-radius: 30px;
+  padding: 30px;
   text-align: center;
+  background: rgba(13, 30, 41, 0.4);
+
   &__uv {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 100%;
   }
 
@@ -23,109 +28,125 @@ h3 {
     p {
       display: flex;
       align-items: center;
-      color: #f8f8f8;
+      font-weight: 700;
       font-size: 20px;
-      font-weight: bold;
+      color: #f8f8f8;
     }
+
     img {
       margin-right: 10px;
       width: 40px;
       height: 40px;
     }
   }
+
   h3 {
-    text-align: left;
     margin: 0;
-    color: #fff;
     font-size: 24px;
+    text-align: left;
+    color: #fff;
   }
+
   &__humudity {
-    border-radius: 20px;
-    width: 30px;
-    height: 80px;
-    padding: 5px;
     display: flex;
     justify-content: center;
+    border-radius: 20px;
+    padding: 5px;
+    width: 30px;
+    height: 80px;
+
     div {
+      border-radius: 10px;
       width: 90%;
       height: 100%;
-      border-radius: 10px;
     }
   }
 }
+
 .gradient {
   position: relative;
 }
+
 .visibility {
-  font-size: 18px;
-  color: #f8f8f8;
-  text-align: left;
   margin-top: 30px;
+  font-size: 18px;
+  text-align: left;
+  color: #f8f8f8;
 }
+
 svg {
   transform: rotate(180deg);
 }
+
 .humudity {
   display: flex;
   justify-content: space-between;
+
   &__percent {
     p {
-      color: #f8f8f8;
       font-size: 18px;
       text-align: left;
+      color: #f8f8f8;
     }
   }
 }
+
 path {
-  fill: none;
-  stroke: url(#orange-to-pink);
-  stroke-width: 8;
-  stroke-linecap: round;
-  pointer-events: none;
   border: 1px solid #000;
+  fill: none;
+  stroke: url('#orange-to-pink');
+  stroke-linecap: round;
+  stroke-width: 8;
+  pointer-events: none;
 }
+
 .firstIndex {
   position: absolute;
   left: -15px;
   bottom: 20px;
-  color: #f8f8ff;
+  font-weight: 700;
   font-size: 22px;
-  font-weight: bold;
+  color: #f8f8ff;
 }
+
 .secondIndex {
   position: absolute;
-  top: -30%;
   left: 25%;
-  color: #f8f8ff;
+  top: -30%;
+  font-weight: 700;
   font-size: 22px;
-  font-weight: bold;
+  color: #f8f8ff;
 }
+
 .thirdIndex {
   position: absolute;
-  top: -30%; /* position the top  edge of the element at the middle of the parent */
   right: 25%;
-  color: #f8f8ff;
+  top: -30%; /* position the top  edge of the element at the middle of the parent */
+  font-weight: 700;
   font-size: 22px;
-  font-weight: bold;
+  color: #f8f8ff;
 }
+
 .lastIndex {
   position: absolute;
   right: -30px;
   bottom: 20px;
-  color: #f8f8ff;
+  font-weight: 700;
   font-size: 22px;
-  font-weight: bold;
+  color: #f8f8ff;
 }
+
 .mainIndex {
   position: absolute;
-  margin-left: auto;
-  margin-right: auto;
   top: 50%; /* position the top  edge of the element at the middle of the parent */
-  color: #f8f8f8;
   display: block;
+  margin-right: auto;
+  margin-left: auto;
   width: 100%;
   font-size: 40px;
+  color: #f8f8f8;
 }
+
 h2 {
   margin: 0;
 }
@@ -135,26 +156,29 @@ h2 {
     display: flex;
     align-items: center;
     font-size: 16px;
+
     span {
-      color: #f8f8f8;
       font-size: 22px;
+      color: #f8f8f8;
     }
   }
+
   img {
     margin-right: 10px;
     width: 40px;
     height: 40px;
   }
 }
+
 .windStatus {
   p {
+    font-size: 20px;
     text-align: left;
     color: #f8f8f8;
-    font-size: 20px;
   }
 }
 
-@media screen and (max-width: 480px) {
+@include for-phone-only {
   .widgets {
     grid-template-columns: 1fr;
   }
