--- a/src/index.scss
+++ b/src/index.scss
@@ -1,129 +1,2 @@
-@import url('https://fonts.googleapis.com/css2?family=Pattaya&display=swap');
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-image: url('./images/weatherbg.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.container {
-  display: grid;
-  grid-template-columns: 20% 70%;
-  min-height: 100vh;
-  &__content {
-    display: grid;
-    grid-template-columns: 1fr 300px;
-    grid-gap: 20px;
-    padding-bottom: 30px;
-  }
-}
-.page-title {
-  font-size: 30px;
-  color: #fff;
-}
-.content {
-  padding-left: 50px;
-  h2 {
-    margin-bottom: 20px;
-    font-size: 24px;
-  }
-}
-.slick-slider {
-  overflow: hidden;
-  padding: 0 0px 0 40px;
-}
-.slick-next {
-  position: absolute;
-  right: 10px;
-  z-index: 9999;
-  &:before {
-    content: '\2B9E';
-    font-size: 30px;
-  }
-}
-.slick-prev {
-  position: absolute;
-  left: 0;
-  z-index: 9999;
-  &:before {
-    font-size: 30px;
-    content: '\2B9C';
-  }
-}
-* {
-  box-sizing: border-box;
-}
-
-@media screen and (max-width: 1024px) {
-  .container {
-    position: relative;
-    display: block;
-    &__content {
-      display: grid;
-      grid-template-columns: unset;
-      grid-template-rows: 1fr 1fr;
-    }
-  }
-  .content {
-    padding: 0 20px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .googleMap {
-    height: 300px;
-  }
-  .container {
-    &__content {
-      grid-template-rows: unset;
-    }
-  }
-}
-
-#mdiv {
-  background-color: black;
-  width: 99vw;
-  height: 100vh;
-  display: grid;
-  place-items: center;
-  position: relative;
-  z-index: 1200;
-}
-.cdiv {
-  width: 15rem;
-  height: 15rem;
-}
-.rot {
-  position: absolute;
-  width: 15rem;
-  height: 15rem;
-  border-right: 0.3rem solid #fff;
-  border-radius: 50%;
-  animation: pre 2s linear infinite;
-}
-@keyframes pre {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
-}
-.lh {
-  color: #fff;
-  font-family: 'Pattaya', sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
+@import 'style/global-mixins';
+@import 'style/base.scss';
