--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,9 @@
+// * Libs
+@import 'slick-carousel/slick/slick.css';
+@import 'slick-carousel/slick/slick-theme.css';
+
+// * Mixins
 @import 'style/global-mixins';
+
+// * Base
 @import 'style/base.scss';
